--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>topsolaroffers.com</title>
 
-   <link rel="shortcut icon" href="assets/img/icons/favicon.ico" type="image/x-icon" />
-   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icons/apple-touch-icon-57x57.png">
+   <link rel="shortcut icon" href="assets/img/favico.ico" type="image/x-icon" />
+   <!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icons/apple-touch-icon-57x57.png">
    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icons/apple-touch-icon-60x60.png">
    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/icons/apple-touch-icon-72x72.png">
    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/icons/apple-touch-icon-76x76.png">
@@ -20,7 +20,7 @@
    <link rel="icon" type="image/png" href="assets/img/icons/favicon-16x16.png" sizes="16x16">
    <link rel="icon" type="image/png" href="assets/img/icons/favicon-32x32.png" sizes="32x32">
    <link rel="icon" type="image/png" href="assets/img/icons/favicon-96x96.png" sizes="96x96">
-   <link rel="icon" type="image/png" href="assets/img/icons/android-chrome-192x192.png" sizes="192x192">
+   <link rel="icon" type="image/png" href="assets/img/icons/android-chrome-192x192.png" sizes="192x192"> -->
    <meta name="msapplication-square70x70logo" content="/assets/img/icons/smalltile.png" />
    <meta name="msapplication-square150x150logo" content="/mediumtile.png" />
    <meta name="msapplication-wide310x150logo" content="/assets/img/icons/widetile.png" />
@@ -457,7 +457,7 @@
 
             <div class="row">
                <div class="col-lg-2">
-                  <!-- <img src="assets/img/logo.jpg" alt="logo" class="img-responsive footer-logo"> -->
+                  <img src="assets/img/logo-solar.png" alt="logo" class="img-responsive footer-logo">
                </div>
                <div class="col-lg-10 disclaimer">
                   <p>
