modified contact us

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <link href="assets/css/bootstrap-theme.css" rel="stylesheet">
    <link href="assets/css/style.css" rel="stylesheet">
    <link href="assets/css/msform.css" rel="stylesheet">
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
    <!--[if lt IE 9]>
@@ -523,12 +523,12 @@
          var google_remarketing_only = true;
 /* ]]> */
       </script>
-      <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+      <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
       </script>
       <noscript>
          <div style="display:inline;">
             <img height="1" width="1" style="border-style:none;" alt=""
-               src="http://googleads.g.doubleclick.net/pagead/viewthroughconversion/993453260/?value=0&amp;guid=ON&amp;script=0" />
+               src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/993453260/?value=0&amp;guid=ON&amp;script=0" />
          </div>
       </noscript>
 
