modification of terms and conditions

--- a/index.html
+++ b/index.html
@@ -209,25 +209,22 @@
 
                         <p class="text-justify">
                            <small>
-                              <label>
-                                 <!-- <input type="hidden" id="leadid_tcpa_disclosure" /> -->
-                                 <!--
-										By submitting this form, you agree to the <a target="_blank" href="/privacy.php">privacy policy</a> and <a target="_blank" href="/terms.php">terms of service</a>.<br />
-                                        <br /> 
-                                        -->
+                              <label class="label_tcpa">
                                  <input type="checkbox" id="tcpaYes" name="tcpaYes" value="1"
-                                    style="display: inline-block; margin: 8px;" required="required" /> By clicking the
-                                 submit button, you agree to our <a target="_blank" href="privacy.php">Privacy
-                                    Policy</a> and authorize topsolaroffers.com and its network of <a target="_blank"
-                                    href="//www.intelligentmediagroup.net/partners.asp#improvement">service
-                                    providers</a> to contact you at the telephone or mobile number you entered regarding
-                                 offers for solar products and services using automated telephone technology including
-                                 auto-dialers, pre-recorded messages, and text messages, even if your telephone or
-                                 mobile number is currently listed on any state, federal, or corporate "Do Not Call"
-                                 list, and you are not required to give your consent as a condition of purchase. You
-                                 will receive calls from up to 4 solar providers. Message and data rates may apply. You
-                                 understand that this consent is not a condition of purchase and that you may revoke
-                                 this consent at any time </label><br />
+                                    style="display: inline-block; margin: 8px;" required="required" />
+
+                                 By clicking "Get A Quote Today", I agree to the <a target="_blank" href="terms.php"
+                                    class="blue-text"><b>Terms of Service</b></a> and<a target="_blank"
+                                    href="privacy.php" class="blue-text"><b> Privacy Policy</b></a> and
+                                 authorize up to<a class="blue-text" target="_blank"
+                                    href="//www.px.com/offer-guidelines/solar/top-solar-companies/"><b> 4 solar energy
+                                       companies, their contractors and partners</b></a> to contact me
+                                 with offers about solar product or service by telephone calls, artificial voice, and
+                                 pre-recorded/text messages, using an automated telephone technology, to the number I
+                                 provided above, even if my number is a mobile number or is currently listed on any
+                                 state, federal or corporate Do Not Call list. I understand that my consent here is not
+                                 a condition of purchase of any goods or services. Message and data rates may apply.
+                              </label><br />
                            </small>
                         </p>
 
@@ -346,35 +343,7 @@
 
 
    <script id="LeadiDscript" type="text/javascript">
-      // <!--
-      // (function () {
-      //    var s = document.createElement('script');
-      //    s.id = 'LeadiDscript_campaign';
-      //    s.type = 'text/javascript';
-      //    s.async = true;
-      //    s.src = '//create.lidstatic.com/campaign/ffa8ba54-2d30-30fc-1e83-4d70e5c5ef55.js?snippet_version=2';
-      //    var LeadiDscript = document.getElementById('LeadiDscript');
-      //    LeadiDscript.parentNode.insertBefore(s, LeadiDscript);
-      // })();
-// -->
    </script>
-   <!-- <noscript><img
-         src='//create.leadid.com/noscript.gif?lac=fc39bfb1-6d94-51e1-a729-ae761310a4b7&amp;lck=ffa8ba54-2d30-30fc-1e83-4d70e5c5ef55&amp;snippet_version=2' /></noscript> -->
-
-   <!-- <script type="text/javascript">
-      (function () {
-         var field = 'xxTrustedFormCertUrl';
-         var provideReferrer = false;
-         var tf = document.createElement('script');
-         tf.type = 'text/javascript'; tf.async = true;
-         tf.src = 'http' + ('https:' == document.location.protocol ? 's' : '') +
-            '://api.trustedform.com/trustedform.js?provide_referrer=' + escape(provideReferrer) + '&field=' + escape(field) + '&l=' + new Date().getTime() + Math.random();
-         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(tf, s);
-      }
-      )();
-   </script>
-   <noscript><img src="//api.trustedform.com/ns.gif" /></noscript> -->
-
    <footer class="footer">
       <div class="footer">
          <div class="container">
@@ -389,10 +358,10 @@
             </div>
 
             <div class="row">
-               <div class="col-lg-2">
+               <div class="col-md-2 text-center">
                   <img src="assets/img/logo-solar.png" alt="logo" class="img-responsive footer-logo">
                </div>
-               <div class="col-lg-10 disclaimer">
+               <div class="col-md-10 disclaimer">
                   <p>
                      The operator of this website does not guarantee that energy savings will result as a use of its
                      service or
