--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@
    <title>Topsolaroffers</title>
 
    <link rel="shortcut icon" href="assets/img/favico.ico" type="image/x-icon" />
-   <!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icons/apple-touch-icon-57x57.png">
-   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icons/apple-touch-icon-60x60.png">
-   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/icons/apple-touch-icon-72x72.png">
-   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/icons/apple-touch-icon-76x76.png">
-   <link rel="apple-touch-icon" sizes="114x114" href="assets/img/icons/apple-touch-icon-114x114.png">
-   <link rel="apple-touch-icon" sizes="120x120" href="assets/img/icons/apple-touch-icon-120x120.png">
-   <link rel="apple-touch-icon" sizes="144x144" href="assets/img/icons/apple-touch-icon-144x144.png">
-   <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icons/apple-touch-icon-152x152.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icons/apple-touch-icon-180x180.png">
-   <link rel="icon" type="image/png" href="assets/img/icons/favicon-16x16.png" sizes="16x16">
-   <link rel="icon" type="image/png" href="assets/img/icons/favicon-32x32.png" sizes="32x32">
-   <link rel="icon" type="image/png" href="assets/img/icons/favicon-96x96.png" sizes="96x96">
-   <link rel="icon" type="image/png" href="assets/img/icons/android-chrome-192x192.png" sizes="192x192"> -->
    <meta name="msapplication-square70x70logo" content="/assets/img/icons/smalltile.png" />
    <meta name="msapplication-square150x150logo" content="/mediumtile.png" />
    <meta name="msapplication-wide310x150logo" content="/assets/img/icons/widetile.png" />
@@ -39,6 +26,23 @@
    <!-- <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> -->
    <!-- <![endif] -->
    <script type="text/javascript" src="assets/js/jquery-2.1.4.min.js"></script>
+   <!-- DO NOT COPY THIS CODE-->
+   <!-- Pixel Code -->
+   <script>
+      !function (f, b, e, v, n, t, s) {
+         if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) };
+         if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+         n.queue = []; t = b.createElement(e); t.async = !0;
+         t.src = v; s = b.getElementsByTagName(e)[0];
+         s.parentNode.insertBefore(t, s)
+      }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '584088422131546');
+      fbq('track', 'PageView');
+   </script>
+   <noscript>
+      <img height="1" width="1" src="https://www.facebook.com/tr?id=584088422131546&ev=PageView&noscript=1" />
+   </noscript>
+   <!-- End Pixel Code -->
 </head>
 
 <body id="index">
@@ -319,7 +323,8 @@
 
          <div class="row">
             <div class="col-sm-6 text-center center-block">
-               <a href="index.html#scrollForm" class="btn btn-save btn-block">Get a Quote Today!</a>
+               <a href="index.html#scrollForm" class="btn btn-save btn-block" onclick="fbq('track', 'ViewContent');">Get
+                  a Quote Today!</a>
             </div>
          </div>
       </div>
