addition of jornaya leadid to capture lead journey on the website

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                               <option value="Commercial Property">Commercial Property</option>
                            </select>
                         </div>
+                        <!-- =========LEADid============ -->
+                        <input id="leadid_token" name="universal_leadid" type="hidden" value="" />
                         <input type="button" name="next" id="next1" class="next action-button bg-green" value="Next" />
                      </fieldset>
 
@@ -210,31 +212,26 @@
                         <!--<input type="button" name="next" class="next action-button" value="Submit" />-->
                         <br />
 
-
                         <p class="text-justify">
-                           <small>
-                              <label class="label_tcpa">
-                                 <input type="checkbox" id="tcpaYes" name="tcpaYes" value="1"
-                                    style="display: inline-block; margin: 8px;" required="required" />
-
-                                 By clicking "Get A Quote Today", I agree to the <a target="_blank" href="terms.php"
-                                    class="blue-text"><b>Terms of Service</b></a> and<a target="_blank"
-                                    href="privacy.php" class="blue-text"><b> Privacy Policy</b></a> and
-                                 authorize up to<a class="blue-text" target="_blank"
-                                    href="//www.px.com/offer-guidelines/solar/top-solar-companies/"><b> 4 solar energy
-                                       companies, their contractors and partners</b></a> to contact me
-                                 with offers about solar product or service by telephone calls, artificial voice, and
-                                 pre-recorded/text messages, using an automated telephone technology, to the number I
-                                 provided above, even if my number is a mobile number or is currently listed on any
-                                 state, federal or corporate Do Not Call list. I understand that my consent here is not
-                                 a condition of purchase of any goods or services. Message and data rates may apply.
-                              </label><br />
-                           </small>
+                           <label class="label_tcpa">
+                              <input type="checkbox" id="leadid_tcpa_disclosure" name="tcpa_disclosure"
+                                 style="display: inline-block; margin: 8px;" required="required" />
+                              By clicking "Get A Quote Today", I agree to the <a target="_blank" href="terms.php"
+                                 class="blue-text"><b>Terms of Service</b></a> and<a target="_blank" href="privacy.php"
+                                 class="blue-text"><b> Privacy Policy</b></a> and
+                              authorize up to<a class="blue-text" target="_blank"
+                                 href="//www.px.com/offer-guidelines/solar/top-solar-companies/"><b> 4 solar energy
+                                    companies, their contractors and partners</b></a> to contact me
+                              with offers about solar product or service by telephone calls, artificial voice, and
+                              pre-recorded/text messages, using an automated telephone technology, to the number I
+                              provided above, even if my number is a mobile number or is currently listed on any
+                              state, federal or corporate Do Not Call list. I understand that my consent here is not
+                              a condition of purchase of any goods or services. Message and data rates may apply.
+                           </label><br />
                         </p>
 
                         <input type="submit" id="submitButton" class="btn btn-block btn-save"
                            value="Get a Quote Today!">
-
                         <!--
                             <p class="text-justify">
                                 <small>
@@ -243,11 +240,8 @@
                                 </small>
                             </p>
                             -->
-
                      </fieldset>
-
                   </form>
-
                </div>
             </div>
          </div>
@@ -345,10 +339,23 @@
          </div>
       </div>
    </div>
-
-
+   <!--===================== DO NOT COPY THIS CODE=============== -->
    <script id="LeadiDscript" type="text/javascript">
+      // <!--
+      (function () {
+         var s = document.createElement('script');
+         s.id = 'LeadiDscript_campaign';
+         s.type = 'text/javascript';
+         s.async = true;
+         s.src = '//create.lidstatic.com/campaign/3ffc1e30-e738-636c-c5df-3540db7a21cc.js?snippet_version=2';
+         var LeadiDscript = document.getElementById('LeadiDscript');
+         LeadiDscript.parentNode.insertBefore(s, LeadiDscript);
+      })();
+      // -->
    </script>
+   <noscript><img
+         src='//create.leadid.com/noscript.gif?lac=90e796b0-f1ee-0403-f993-d685e0010cf9&lck=3ffc1e30-e738-636c-c5df-3540db7a21cc&snippet_version=2' /></noscript>
+   <!-- =====================Footer Area============================== -->
    <footer class="footer">
       <div class="footer">
          <div class="container">
@@ -425,23 +432,20 @@
 
       <script type="text/javascript">
          /* <![CDATA[ */
-         var google_conversion_id = 993453260;
-         var google_custom_params = window.google_tag_params;
-         var google_remarketing_only = true;
-/* ]]> */
+         // var google_conversion_id = 993453260;
+         // var google_custom_params = window.google_tag_params;
+         // var google_remarketing_only = true;
+         /* ]]> */
       </script>
-      <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+      <!-- <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
       </script>
       <noscript>
          <div style="display:inline;">
             <img height="1" width="1" style="border-style:none;" alt=""
                src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/993453260/?value=0&amp;guid=ON&amp;script=0" />
          </div>
-      </noscript>
-
+      </noscript> -->
    </footer>
-
-
    <script type="text/javascript" src="assets/js/jquery-ui-1.11.4.min.js"></script>
    <script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
    <script type="text/javascript" src="assets/js/additional-methods.min.js"></script>
