--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                <div class="box-saving m-b-sm">
                   <a href="index.html#" style="margin-top: 56px;" class="logo"><img src="assets/img/logo-text.jpg"
                         class="img-responsive" /></a>
-                  <h3>NEW 2019 HOME SOLAR REBATES AVAILABLE</h3>
-                  <h1><span class="x-large">FIND OUT</span> <span class="x-large">HOW MUCH</span> YOU CAN SAVE!</h1>
+                  <!-- <h3>NEW 2019 HOME SOLAR REBATES AVAILABLE</h3> -->
+                  <h1><span class="x-large">SEE HOW YOU CAN</span> SAVE WITH SOLAR ENERGY!</h1>
                </div>
             </div>
 
@@ -253,7 +253,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-8 center-block col-sm-12 section-title text-center">
-               <h2>Total Savings After 20 Years</h2>
+               <h2>Estimated Savings After 20 Years</h2>
                <p>
                   <small>
 
@@ -289,30 +289,30 @@
          </div>
 
          <div class="row text-center m-t-sm m-b-sm">
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-4">
                <div class="box-advantage">
                   <span class="adv-icon icon-bank">Bank</span>
-                  <h6>Limited-time Government Rebates Available Now!</h6>
+                  <h6>Take advantage of limited time Federal Tax Credit!</h6>
                </div>
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-4">
                <div class="box-advantage">
                   <span class="adv-icon icon-down">Bill</span>
                   <h6>You May Reduce Your Electrical Bill Dramatically!</h6>
                </div>
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-4">
                <div class="box-advantage">
                   <span class="adv-icon icon-solar">solar panel</span>
                   <h6>Lease Panels for as little as $0 Down</h6>
                </div>
             </div>
-            <div class="col-xs-6 col-md-3">
+            <!-- <div class="col-xs-6 col-md-3">
                <div class="box-advantage">
                   <span class="adv-icon icon-coin">coins</span>
                   <h6>Claim a 30% Federal Tax Credit upon installation</h6>
                </div>
-            </div>
+            </div> -->
          </div>
 
          <div class="row">
