modification of text to suit TCPA standard

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <div class="col-xs-12 col-sm-4">
                <div class="box-advantage">
                   <span class="adv-icon icon-bank">Bank</span>
-                  <h6>Take advantage of limited time Federal Tax Credit!</h6>
+                  <h6>Take advantage of limited time Federal Tax Credits!</h6>
                </div>
             </div>
             <div class="col-xs-12 col-sm-4">
