--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
       </div>
    </div>
-   <div class="section-map">
+   <!-- <div class="section-map">
       <div class="container">
          <div class="row">
             <div class="col-md-8 center-block col-sm-12 section-title text-center">
@@ -277,7 +277,7 @@
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
    <!--section-map end-->
 
    <div class="section-advantage">
