modified RoofShade values to suit PX values

--- a/index.html
+++ b/index.html
@@ -149,27 +149,28 @@
                            <label for="roofShade" class="control-label">How much sun on your roof:</label>
                            <select class="form-control" id="roofShade" name="cust_field_67" required>
                               <option value="">Does your roof get sun?</option>
-                              <option>No Shade</option>
-                              <option>A Little Shade</option>
-                              <option>A Lot Of Shade</option>
-                              <option>Uncertain</option>
+                              <option>Full sun</option>
+                              <option>Partial sun</option>
+                              <option>Mostly shaded</option>
+                              <option>Not sure</option>
                            </select>
                         </div>
                         <div class="form-group">
                            <label for="monthlyBill" class="control-label">Average Monthly Electric Bill:</label>
                            <select class="form-control" id="monthlyBill" name="cust_field_68" required>
                               <option value="">Your average electric bill</option>
-                              <option value="$0-50">$0-50</option>
-                              <option value="$51-100">$51-100</option>
-                              <option value="$101-150">$101-150</option>
-                              <option value="$151-200">$151-200</option>
+                              <option value="$0-25">$0-25</option>
+                              <option value="$26-50">$26-50</option>
+                              <option value="$51-75">$51-75</option>
+                              <option value="$76-100">$76-100</option>
+                              <option value="$101-125">$101-125</option>
+                              <option value="$126-150">$126-150</option>
+                              <option value="$151-175">$151-175</option>
+                              <option value="$176-200">$176-200</option>
                               <option value="$201-300">$201-300</option>
                               <option value="$301-400">$301-400</option>
                               <option value="$401-500">$401-500</option>
-                              <option value="$501-600">$501-600</option>
-                              <option value="$601-700">$601-700</option>
-                              <option value="$701-800">$701-800</option>
-                              <option value="$801+">$801+</option>
+                              <option value="$500+">$500+</option>
                            </select>
                         </div>
                         <div class="form-group">
