modified RoofShade values to suit PX values

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="form-group">
                            <label for="propertyType" class="control-label">Authorized For Property Changes?</label>
                            <select class="form-control" id="authorizeChange" name="cust_field_103" required="required">
-                              <option value="">Do you have Authority?</option>
+                              <option value="">Do you have the Authority?</option>
                               <option>Yes</option>
                               <option>No</option>
                            </select>
