modified scroll to form area and pixel

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Topsolaroffers</title>
 
-   <link rel="shortcut icon" href="assets/img/favico.ico" type="image/x-icon" />
-   <meta name="msapplication-square70x70logo" content="/assets/img/icons/smalltile.png" />
+   <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+   <!-- <meta name="msapplication-square70x70logo" content="/assets/img/icons/smalltile.png" />
    <meta name="msapplication-square150x150logo" content="/mediumtile.png" />
    <meta name="msapplication-wide310x150logo" content="/assets/img/icons/widetile.png" />
-   <meta name="msapplication-square310x310logo" content="/assets/img/icons/largetile.png" />
+   <meta name="msapplication-square310x310logo" content="/assets/img/icons/largetile.png" /> -->
+   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+   <meta http-equiv="Pragma" content="no-cache" />
+   <meta http-equiv="Expires" content="0" />
 
    <!-- Bootstrap -->
    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -42,46 +45,36 @@
    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5NXBHWV" height="0" width="0"
          style="display:none;visibility:hidden"></iframe></noscript>
    <!-- End Google Tag Manager (noscript) -->
-
    <div class="section-top">
       <div class="container">
-
          <div class="row p-b-md">
-
             <div class="col-md-5">
                <div class="box-saving m-b-sm">
-                  <a href="index.html#" style="margin-top: 56px;" class="logo"><img src="assets/img/logo-text.jpg"
-                        class="img-responsive" /></a>
-                  <!-- <h3>NEW 2019 HOME SOLAR REBATES AVAILABLE</h3> -->
+                  <a href="index.html#" style="margin-top: 56px;" class="logo">
+                     <img src="assets/img/logo-text.jpg" class="img-responsive" alt="Topsolar Logo" />
+                  </a>
                   <h1><span class="x-large">SEE HOW YOU CAN</span> SAVE WITH SOLAR ENERGY!</h1>
                </div>
             </div>
-
             <div class="col-sm-2">&nbsp;</div>
-
             <div class="col-md-5" id="scrollForm">
                <div class="form-banner bg-green text-center">
-                  <!--<h4>2019 Solar Rebates Available Now!</h4>-->
                   <h6 class="white-text">Complete the form to get free quotes <br /> and find out which rebates are
                      available</h6>
                </div>
                <div class="rebate-form form-horizontal">
-
                   <div id="errorContainer" class="alert alert-danger" role="alert" style="display: none;">
                      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                      <span class="sr-only">Error:</span>
                      <span id="errorMessage"></span>
                   </div>
-
                   <form id="msform" class="tin leadForm2" action="https://www.topsolaroffers.com/thank-you.asp"
                      method="post" enctype="application/x-www-form-urlencoded" onsubmit="return DoSignup(this);">
-
                      <ul id="progressbar">
                         <li class="active">&nbsp;</li>
                         <li>&nbsp;</li>
                         <li>&nbsp;</li>
                      </ul>
-
                      <fieldset>
                         <h2 class="fs-title">How much can solar lower my home's electricity bill?</h2>
                         <div class="form-group">
@@ -218,11 +211,7 @@
                               <option>Poor</option>
                            </select>
                         </div>
-
-                        <!--<input type="button" name="previous" class="previous action-button" value="Previous" />-->
-                        <!--<input type="button" name="next" class="next action-button" value="Submit" />-->
                         <br />
-
                         <p class="text-justify">
                            <label class="label_tcpa">
                               <input type="checkbox" id="leadid_tcpa_disclosure" name="tcpa_disclosure"
@@ -240,24 +229,13 @@
                               a condition of purchase of any goods or services. Message and data rates may apply.
                            </label><br />
                         </p>
-
                         <input type="submit" id="submitButton" class="btn btn-block btn-save"
                            value="Get a Quote Today!">
-                        <!--
-                            <p class="text-justify">
-                                <small>
-                                    <center><span class="partnerco"><a target="_blank" href="http://www.intelligentmediagroup.net/partners.asp#improvement">Partner Home Service Companies</a></span></center>
-                                    <center><span class="partnerco"><a target="_blank" href="http://www.solar-partners.info/">and more Partner Home Service Companies</a></span></center>
-                                </small>
-                            </p>
-                            -->
                      </fieldset>
                   </form>
                </div>
             </div>
          </div>
-
-
       </div>
    </div>
    <!-- <div class="section-map">
@@ -290,7 +268,6 @@
       </div>
    </div> -->
    <!--section-map end-->
-
    <div class="section-advantage">
       <div class="container">
          <div class="row">
@@ -325,18 +302,14 @@
                </div>
             </div> -->
          </div>
-
          <div class="row">
             <div class="col-sm-6 text-center center-block">
-               <!-- <a href="index.html#scrollForm" class="btn btn-save btn-block" onclick="fbq('track', 'ViewContent');">Get -->
-               <a href="index.html#scrollForm" class="btn btn-save btn-block">Get
-                  a Quote Today!</a>
+               <a href="#scrollForm" class="btn btn-save btn-block">Get a Quote Today!</a>
             </div>
          </div>
       </div>
    </div>
    <!--section-advantage end-->
-
    <div class="modal modal-static fade" id="modalProcessing" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
          <div class="modal-content">
@@ -371,7 +344,6 @@
    <footer class="footer">
       <div class="footer">
          <div class="container">
-
             <div class="row footer-links">
                <div class="col-lg-12 text-center">
                   <small><a href="terms.php">Terms of Service</a> |</small>
@@ -380,7 +352,6 @@
                   <!--<small><a href="#">About Us</a></small>-->
                </div>
             </div>
-
             <div class="row">
                <div class="col-md-2 text-center">
                   <img src="assets/img/logo-solar.png" alt="logo" class="img-responsive footer-logo">
@@ -433,7 +404,6 @@
                   </p>
                </div>
             </div>
-
             <div class="row">
                <div class="col-lg-12">
                   <p class="copyright">Copyright &copy; 2019 Topsolaroffers.com</p>
@@ -441,22 +411,6 @@
             </div>
          </div>
       </div>
-
-      <script type="text/javascript">
-         /* <![CDATA[ */
-         // var google_conversion_id = 993453260;
-         // var google_custom_params = window.google_tag_params;
-         // var google_remarketing_only = true;
-         /* ]]> */
-      </script>
-      <!-- <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-      </script>
-      <noscript>
-         <div style="display:inline;">
-            <img height="1" width="1" style="border-style:none;" alt=""
-               src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/993453260/?value=0&amp;guid=ON&amp;script=0" />
-         </div>
-      </noscript> -->
    </footer>
    <script type="text/javascript" src="assets/js/jquery-ui-1.11.4.min.js"></script>
    <script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
