addition of test URL and state hidden input

--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
                               <option value="$201-300">$201-300</option>
                               <option value="$301-400">$301-400</option>
                               <option value="$401-500">$401-500</option>
-                              <option value="$500+">$500+</option>
+                              <option value="$501-600">$501-600</option>
+                              <option value="$601-700">$601-700</option>
+                              <option value="$701-800">$701-800</option>
+                              <option value="$801+">$801+</option>
                            </select>
                         </div>
                         <div class="form-group">
@@ -200,6 +203,7 @@
                               <option value="US">United State</option>
                               <option value="Other">Others</option>
                            </select>
+                           <input type="hidden" name="state" id="state">
                         </div>
                         <div class="form-group">
                            <label for="creditRating" class="control-label">What is your Credit Score:</label>
