addition of form on the blog page

--- a/iframe.html
+++ b/iframe.html
@@ -37,7 +37,7 @@
    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5NXBHWV" height="0" width="0"
          style="display:none;visibility:hidden"></iframe></noscript>
    <!-- End Google Tag Manager (noscript) -->
-   <div class="section-top">
+   <div class="section-to" style="background: #eee;">
       <div class="container">
          <div class="row p-b-md">
             <div class="col-md-5">
@@ -264,7 +264,7 @@
       </div>
    </div> -->
    <!--section-map end-->
-   <div class="section-advantage">
+   <div class="section-advantage" style="visibility: hidden;">
       <div class="container">
          <div class="row">
             <div class="col-sm-12 section-title text-center">
